<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="de.blinkt.openvpn.remote.MainFragment">

    <TextView
        android:id="@+id/bindStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:text="Service disconnected" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minLines="3"
        android:text="@string/no_status_yet" />

    <TextView
        android:id="@+id/vpnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:minLines="10"
        android:text="@string/vpn_list" />

    <Button
        android:id="@+id/startVPN_aidl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/aidl_connect"
        android:visibility="visible" />

    <Button
        android:id="@+id/startVPN_intent"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/intent_connect"
        android:visibility="visible" />

    <Button
        android:id="@+id/startembedded_aidl"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/start_embedded_aidl" />

    <Button
        android:id="@+id/startembedded_intent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/start_embedded_intent" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/disconnect" />

</LinearLayout>
